Fix URL wrapping

--- a/nycommons/static/css/mixins.less
+++ b/nycommons/static/css/mixins.less
@@ -48,6 +48,7 @@
 
 .user-content-content {
     display: block;
+    word-wrap: break-word;
 }
 
 .user-content-meta {
